// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pokemon Page component Debe de hacer match con el snapshot 1`] = `
<div>
  <h1>Espere por favor</h1>
  <!--v-if-->
</div>
`;

exports[`Pokemon Page component Debe de hacer match con el snapshot cuando cargan los pokemons 1`] = `
<div>
  <!--v-if-->
  <div class="pokemon-info">
    <h1>¿Quién es este pokemón?</h1>
    <pokemon-picture-stub pokemonid="1" showpokemon="false"></pokemon-picture-stub>
    <pokemon-options-stub pokemons="[object Object],[object Object],[object Object],[object Object]"></pokemon-options-stub>
    <!--v-if-->
  </div>
</div>
`;
